src/test/ui/generic-associated-types/gat-in-trait-path-undeclared-lifetime.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0261]: use of undeclared lifetime name `'x`
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:9:35
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |        -                          ^^ undeclared lifetime
   |        |
   |        help: consider introducing lifetime `'x` here: `<'x>`
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error[E0582]: binding for associated type `Y` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:9:33
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                                 ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0261, E0582.
For more information about an error, try `rustc --explain E0261`.
